--- a/App1/App1/App1.csproj
+++ b/App1/App1/App1.csproj
@@ -15,18 +15,20 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Shiny" Version="2.0.0.2579-preview" />
-        <PackageReference Include="Shiny.Beacons" Version="2.0.0.2579-preview" />
-        <PackageReference Include="Shiny.BluetoothLE" Version="2.0.0.2579-preview" />
-        <PackageReference Include="Shiny.Framework" Version="1.0.0.40" />
-        <PackageReference Include="Shiny.Integrations.Sqlite" Version="2.0.0.2579-preview" />
-        <PackageReference Include="Shiny.Locations" Version="2.0.0.2579-preview" />
-        <PackageReference Include="Shiny.Logging.AppCenter" Version="2.0.0.2579-preview" />
-        <PackageReference Include="Shiny.Net.Http" Version="2.0.0.2579-preview" />
-        <PackageReference Include="Shiny.Nfc" Version="2.0.0.2579-preview" />
-        <PackageReference Include="Shiny.Notifications" Version="2.0.0.2579-preview" />
-        <PackageReference Include="Shiny.Push.AzureNotificationHubs" Version="2.0.0.2579-preview" />
-        <PackageReference Include="Shiny.Sensors" Version="2.0.0.2579-preview" />
+        <PackageReference Include="Shiny" Version="2.0.0.2608-preview" />
+        <PackageReference Include="Shiny.Beacons" Version="2.0.0.2608-preview" />
+        <PackageReference Include="Shiny.BluetoothLE" Version="2.0.0.2608-preview" />
+        <PackageReference Include="Shiny.Framework" Version="1.0.0.57" />
+        <PackageReference Include="Shiny.Integrations.Sqlite" Version="2.0.0.2608-preview" />
+        <PackageReference Include="Shiny.Locations" Version="2.0.0.2608-preview" />
+        <PackageReference Include="Shiny.Logging.AppCenter" Version="2.0.0.2608-preview" />
+        <PackageReference Include="Shiny.Logging.Firebase" Version="2.0.0.2608-preview" />
+        <PackageReference Include="Shiny.Net.Http" Version="2.0.0.2608-preview" />
+        <PackageReference Include="Shiny.Nfc" Version="2.0.0.2608-preview" />
+        <PackageReference Include="Shiny.Notifications" Version="2.0.0.2608-preview" />
+        <PackageReference Include="Shiny.Push.AzureNotificationHubs" Version="2.0.0.2608-preview" />
+        <PackageReference Include="Shiny.Push.FirebaseMessaging" Version="2.0.0.2608-preview" />
+        <PackageReference Include="Shiny.Sensors" Version="2.0.0.2608-preview" />
         <PackageReference Include="Xamarin.Forms" Version="5.0.0.2012" />
         <PackageReference Include="Xamarin.Essentials" Version="1.6.1" />
     </ItemGroup>
